--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,7 +79,10 @@ button.Action {
     padding: 1.5rem; 
     border-radius: 1rem;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    height: calc(100vh - 25px); /* Adiciona o estilo aqui */
+    min-height: 100px; 
+    max-width: 100%;
+    max-height: 100vh;
+    overflow-y: auto;
 }
 
 .formlabel {
@@ -97,9 +100,46 @@ button.Action {
     color: #db2777;
 }
 
+.title-h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    font-weight: 700;
+    color: #db2777;
+}
+
 .Custom-input {
     width: 100%;
     padding: 0.5rem;
     border: 1px solid #db2777;
     border-radius: 0.375rem;
+    color: #000000;
+}
+
+/* MODAL */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.578);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+.modal-dialog {
+    display: flex;
+    flex-direction: column;
+    max-width: 90vw; 
+    max-height: 50vh; 
+    margin-top: 60px;
+}
+.modal-content {
+    background-color: rgb(207, 213, 219);
+    padding: 10px;
+    border-radius: 6px;
+    margin-left: 100px;
+    margin-right:100px;
+    margin-bottom: 100px;
 }
