--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+
 button.save {
     color: #ffffff;
     background-color: #db2777;   
@@ -79,10 +80,9 @@ button.Action {
     padding: 1.5rem; 
     border-radius: 1rem;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    min-height: 100px; 
+    min-height: 97vh; 
     max-width: 100%;
     max-height: 100vh;
-    overflow-y: auto;
 }
 
 .formlabel {
@@ -143,3 +143,4 @@ button.Action {
     margin-right:100px;
     margin-bottom: 100px;
 }
+
