--- a/src/app/ERP/Agendamento/agendamento.css
+++ b/src/app/ERP/Agendamento/agendamento.css
@@ -1,21 +1,26 @@
+.calendariocontainer {
+    background-color: #FFE9EF;
+    border-radius: 1rem;
+    padding: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    width: 100%;
+    height: 80%;
+    margin: 10px;
+}
+
 .calendario {
     display: flex;
     padding: 20px;
-    height: 1000px;
+    width: 100%; /* Ocupa toda a largura da tela */
+    height: calc(100vh - 45px);
     background-color: #FFFFFF;
     border-radius: 1rem;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     overflow: auto;
 }
 
-.calendariocontainer {
-    background-color: #FFE9EF;
-    border-radius: 1rem;
-    padding: 10px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    display: flex;
-    flex-direction: column;
-}
+
+/*
 
 .toolbar {
     position: fixed;
@@ -53,6 +58,8 @@
     font-weight: 500;
 }
 
+
+
 .dirtop {
     width: 30%;
     display: flex;
@@ -61,7 +68,11 @@
     padding-right: 30px;
 }
 
+
+
+
 /* Header e Botoes do Calendário */
+
 .rbc-toolbar {
     background-color: #fff;
     padding: 10px;
@@ -72,7 +83,9 @@
     border-bottom: 2px solid #f55381;
     font-size: 20px;
     font-weight: bold;
+    width: calc(160vh - 5px);/* Ajuste a largura do CALENDARIO */
 }
+
 
 .rbc-toolbar-label {
     font-size: 30px;
