--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,9 +80,7 @@ button.Action {
     padding: 1.5rem; 
     border-radius: 1rem;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    min-height: 97vh; 
-    max-width: 100%;
-    max-height: 100vh;
+    height: 100%;
 }
 
 .formlabel {
