--- a/src/app/ERP/Agendamento/agendamento.css
+++ b/src/app/ERP/Agendamento/agendamento.css
@@ -19,14 +19,28 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     overflow: auto;
 }
+
+.containerfilters {
+    background-color: #FFE9EF;
+    align-items: center;
+    margin: 10px;
+    border-radius: 1rem;
+    padding: 0.1rem;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
 .formfilter {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
     margin: 10px;
     border-radius: 1rem;
-    border: 1px solid #f55381; /* Adiciona uma borda preta */
+    padding: 1.5rem;
+    background-color: #FFFFFF;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    
 }
+
 
 
 /*
@@ -182,11 +196,15 @@
     border-radius: 15px;
 }
 
+
+
+
+
 /* Eventos */
 .rbc-event {
     background-color: #333;
     color: #fff;
-    padding: 8px;
+    padding: 1px;
     border-radius: 8px;
     transition: transform 0.2s ease;
 }
