adicionar agendamento funcionando

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -134,7 +134,7 @@ button.Action {
     margin-top: 60px;
 }
 .modal-content {
-    background-color: rgb(207, 213, 219);
+    background-color: #fff;
     padding: 10px;
     border-radius: 6px;
     margin-left: 100px;
